--- a/src/app/data-environment/propositions/proposition-list/proposition-list.component.html
+++ b/src/app/data-environment/propositions/proposition-list/proposition-list.component.html
@@ -7,7 +7,8 @@
         <th class="col-5 col-md-3">Resumo</th>
         <th class="d-none d-lg-table-cell col-0 col-md-2">Data</th>
         <th class="d-none d-lg-table-cell col-0 col-md-2">Coleção</th>
-        <th class="col-2"> &nbsp; </th>
+        <th class="col-1"> &nbsp; </th>
+        <th class="col-1"> &nbsp; </th>
       </tr>
     </thead>
     <tr *ngFor="let proposition of propositions" class="row">
@@ -16,7 +17,8 @@
       <td class="col-5 col-md-3"> {{ proposition.summary }} </td>
       <td class="d-none d-lg-table-cell col-0 col-md-2"> {{ proposition.date | date: 'dd/MM/yyyy' }} </td>
       <td class="d-none d-lg-table-cell col-0 col-md-2"> {{ proposition.collection }} </td>
-      <td class="col-2"><button (click)="selectProposition(proposition.id)" class="btn btn-outline-primary btn-select"> <fa name="caret-right"></fa> </button></td>
+      <td class="col-1"><button (click)="selectProposition(proposition.id)" class="btn btn-outline-primary btn-select"> <fa name="caret-right"></fa> </button></td>
+      <td class="col-1"><button class="btn btn-outline-danger" (click)="deleteProposition(proposition.id)"><fa name="times"></fa></button>
     </tr>
     <tr class="row">
  
@@ -28,6 +30,7 @@
           <td class="d-none d-lg-table-cell col-0 col-md-2"><input type="date" name="newDate" id="newDate" [(value)]="newDate" #date></td>
           <td class="d-none d-lg-table-cell col-0 col-md-2"><input type="text" name="newCollection" id="newCollection" [(value)]="newCollection" #collection></td>
           <td class="col-2"><button (click)="newProposition(description.value, summary.value, date.value, collection.value)" class="btn btn-outline-primary btn-select"> <fa name="plus"></fa> </button></td>
+        <th class="col-1"> &nbsp; </th>
 
 
       </tr>
