adicionado verificao de evidencia

--- a/src/app/expert-environment/expert.component.html
+++ b/src/app/expert-environment/expert.component.html
@@ -22,11 +22,12 @@
                 </td>
                 <td class="col-12 col-md-3">
                     
-                        <pd-expert-value [valor]="gin"></pd-expert-value>
+                    <pd-expert-value [valor]="gin"></pd-expert-value>
                 </td>
         </tr>
 
     </table>
+    <button class="btn btn-info mt-2 float-right" click="">Enviar</button>>
     <!-- <script>
         var rangeSlider = function(){
         var slider = $('.celula'),
