--- a/src/app/data-environment/workspace/workspace.component.html
+++ b/src/app/data-environment/workspace/workspace.component.html
@@ -41,6 +41,40 @@
   <br />
   <br />
   <br />
+  <div class="col-12">
+
+    <div class="col-6">
+      <table>
+        <tr>
+          <th class="col-6">Nome</th>
+          <th class="col-2">Facilitador</th>
+          <th class="col-2">Especialista</th>
+          <th class="col-2">Analista</th>
+        </tr>
+        <span *ngFor="let profile of profiles">
+          <tr>
+            <td ><p class="card-text">{{ profile.userName }}</p></td>
+            <td><input type="checkbox" id="changeAdminProfile" [checked]="profile.admin" (click)="changeAdmin(adminProfile.checked, profile.id)" #changeAdmin></td>
+            <td><input type="checkbox" id="changeExpertProfile" [checked]="profile.expert" (click)="expertProfile(expertProfile.checked, profile.id)" #changeExpert></td>
+            <td><input type="checkbox" id="changeAnalystProfile" [checked]="profile.analyst" (click)="analystProfile(analystProfile.checked, profile.id)" #changeAnalyst></td>
+          </tr>
+        </span>
+      </table>
+    </div>
+
+    <div class="col-6">
+      <div class="row mt-3" *ngFor="let user of users">
+        <h3 class="col-3 col-md-2 factor-item d-flex align-items-center">{{ user.name }}</h3>
+        <h4 class="col-3 col-md-1 factor-item d-flex align-items-center">{{ user.department }}</h4>
+        <a class="mx-auto display-4 mt-2 ml-3" (click)="addProfile(proposition.id, user.id)">
+          <h3 class="d-inline-block float-right  hover-red">
+            <fa name="plus"></fa>
+          </h3>
+        </a>
+      </div>
+    </div>
+
+  </div>
   <span *ngFor="let factor of factors">
     <div class="row mt-3">
       <div class="col-12 col-md-2 h2 factor-item d-flex align-items-center factor-tag">{{factor.tag}}</div>
