--- a/src/app/data-environment/workspace/workspace.component.html
+++ b/src/app/data-environment/workspace/workspace.component.html
@@ -101,6 +101,9 @@
     </div>
 
   </span>
-
+  <div class="group col-6">
+    <h3>Grupos</h3>
+    <button type="button" class="btn-circle btn btn-outline-primary"><fa name="plus"></fa></button>
+  </div>
 
 </div>
