--- a/src/app/data-environment/workspace/workspace.component.css
+++ b/src/app/data-environment/workspace/workspace.component.css
@@ -38,6 +38,19 @@
   .btn-outline-primary:focus{
     color: white
   }
+  .group {
+    margin-top: 50px;
+    text-align: center;
+  }
+  .btn-circle {
+    width: 50px;
+    height: 50px;
+    padding: 10px 16px;
+    border-radius: 25px;
+    font-size: 12px;
+    text-align: center;
+    margin-top: 15px;
+  }
 
 
 
