--- a/src/app/data-environment/workspace/workspace.component.css
+++ b/src/app/data-environment/workspace/workspace.component.css
@@ -30,25 +30,31 @@
   }
 
   .factor-tag {
-    background: -webkit-linear-gradient(to right, #EEE,#DDD);  
-    background: -moz-linear-gradient(to right, #EEE,#DDD);  
-    background: -o-linear-gradient(to right, #EEE,#DDD);  
-    background: linear-gradient(to right, #EEE,#DDD);  
-    -webkit-transition: background 1s ease-out;  
-    -moz-transition: background 1s ease-out;  
-    -o-transition: background 1s ease-out;  
-    transition: background 1s ease-out;  
+    background: -webkit-linear-gradient(to right, #EEE,#DDD);
+    background: -moz-linear-gradient(to right, #EEE,#DDD);
+    background: -o-linear-gradient(to right, #EEE,#DDD);
+    background: linear-gradient(to right, #EEE,#DDD);
+    -webkit-transition: background 1s ease-out;
+    -moz-transition: background 1s ease-out;
+    -o-transition: background 1s ease-out;
+    transition: background 1s ease-out;
 
   }
   .factor-tag:hover {
     background-image: linear-gradient(to right, #EEE, #BBB);
   }
 
+  .factor {
+    margin-top: 80px;
+    margin-right: 60px;
+
+  }
+
   .btn-outline-primary:focus{
     color: white
   }
   .group {
-    margin-top: 50px;
+    margin-top: 80px;
     text-align: center;
   }
   .btn-circle {
