--- a/src/app/data-environment/workspace/workspace.component.html
+++ b/src/app/data-environment/workspace/workspace.component.html
@@ -131,9 +131,17 @@
     </div>
 
   </span>
+
   <div class="group col-6">
     <h3>Grupos</h3>
-    <button type="button" class="btn-circle btn btn-outline-primary"><fa name="plus"></fa></button>
+    <div *ngFor="let group of groups" class="card w-100">
+      <div class="card-body">
+        <h4 class="card-title">{{group.description}}</h4>
+        <p class="card-text">{{group.summary}}</p>
+        <button class="btn btn-primary" >Editar</button>
+      </div>
+    </div>
+    <button type="button" class="btn-circle btn btn-outline-primary" (click)="newGroup()"><fa name="plus"></fa></button>
   </div>
 
 </div>
