separacao dos grupos da workspace

--- a/src/app/data-environment/workspace/workspace.component.css
+++ b/src/app/data-environment/workspace/workspace.component.css
@@ -48,16 +48,14 @@
 .btn-outline-primary:focus{
     color: white
 }
-  .factor {
+
+.factor {
     margin-top: 80px;
     margin-right: 60px;
 
-  }
+}
 
-  .btn-outline-primary:focus{
-    color: white
-  }
-  .group {
+.group {
     margin-top: 80px;
     text-align: center;
 }
@@ -113,7 +111,7 @@
         margin-top:-7px;
         left: 2px;
         color: #17A2B8;
-        xtransition: all .2s;
+        transition: all .2s;
     }
 
     .custom-checkbox > [type="checkbox"]:not(:checked) + label:after {
