--- a/src/app/data-environment/workspace/workspace.component.html
+++ b/src/app/data-environment/workspace/workspace.component.html
@@ -1,42 +1,5 @@
 <div class="container">
-  <ng-template #content let-modal>
-    <div class="modal-header">
-      <h4 class="modal-title" id="modal-basic-title">Novo Criterio</h4>
-      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-      <form>
-        <div class="form-group">
-          <label for="newFactorDescription">Nome</label>
-          <input id="newFactorDescription" class="form-control" name="newFactorDescription"
-            [(value)]="newFactorDescription" #factorDescription>
-          <hr />
-          <label for="newFactorTag">Sigla</label>
-          <input id="newFactorTag" class="form-control" name="newFactorTag" [(value)]="newFactorTag" #factorTag>
-          <hr />
-          <label for="newFactorSummary">Resumo</label>
-          <textarea class="form-control" id="newFactorSummary" rows="3" name="newFactorSummary"
-            [(value)]="newFactorSummary" #factorSummary></textarea>
-          <hr />
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" value="" id="newFactorSelected"
-              [(checked)]="newFactorSelected" #factorSelected>
-            <label class="form-check-label" for="newFactorSelected">
-              Replicar Seção
-            </label>
-          </div>
-
-        </div>
-      </form>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-outline-primary"
-        (click)="newFactor(factorTag.value, factorDescription.value, factorSummary.value, factorSelected.checked)">Adicionar</button>
-    </div>
-  </ng-template>
-  <button class="btn btn-info mt-2 float-right" (click)="open(content)"> Novo Criterio </button>
+  <pd-new-factor></pd-new-factor>
   <div class="factor col-12 float-right">
     <span *ngFor="let factor of factors">
       <div class="row mt-3">
