mudancas em aparencia workspace

--- a/src/app/data-environment/workspace/workspace.component.html
+++ b/src/app/data-environment/workspace/workspace.component.html
@@ -1,12 +1,13 @@
-<div class="container">
-  <div class="col-12">
-    <pd-new-factor></pd-new-factor>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12">
+      <pd-new-factor></pd-new-factor>
+    </div>
+    <div class="col-12 col-md-6 float-left mt-2 mb-2 bg-danger">
+      <pd-profile></pd-profile>
+    </div>
+    <div class="group col-12 col-md-6 float-left mt-2 mb-2 bg-warning">
+      <pd-group></pd-group>
+    </div>
   </div>
-  <div class="col-12 col-md-6 float-left mt-2 mb-2">
-    <pd-profile></pd-profile>
-  </div>
-  <div class="group col-12 col-md-6 float-left mt-2 mb-2">
-    <pd-group></pd-group>
-  </div>
-
 </div>
