--- a/src/app/data-environment/workspace/factor/factor.component.html
+++ b/src/app/data-environment/workspace/factor/factor.component.html
@@ -36,11 +36,11 @@
     </div>
 </ng-template>
 <button class="btn btn-info mt-2 float-right" (click)="open(content)"> Novo Criterio </button>
-<div class="factor col-12 float-right">
+<div class="factor col-12">
     <span *ngFor="let factor of factors">
-      <div class="row mt-3">
-        <div class="col-12 col-md-2 h2 factor-item d-flex align-items-center factor-tag">{{factor.tag}}</div>
-        <div class="col-12 col-md-7 factor-item ">
+      <div class="row border-left-info shadow-sm py-2 my-2 px-2 rounded-right">
+        <div class="col-12 col-md-2 h2 d-flex align-items-center">{{factor.tag}}</div>
+        <div class="col-12 col-md-7">
           {{factor.description}}<br />
           <span class="text-muted">{{factor.summary}}</span>
         </div>
@@ -52,7 +52,7 @@
             attr.data-target="#sections{{factor.id}}" [disabled]="factor.sections.length == 0" (click)="toggle()">
             <fa [name]="visible? 'caret-up' : 'caret-down'"></fa>
           </button>
-          <a class="mx-auto display-4 mt-2 ml-3" (click)="deleteFactor(factor.id)">
+          <a class="mx-auto display-4 mt-2 ml-3 mr-3" (click)="deleteFactor(factor.id)">
             <h3 class="d-inline-block float-right  hover-red">
               <fa name="minus"></fa>
             </h3>
