--- a/src/app/data-environment/workspace/profile/profile.component.html
+++ b/src/app/data-environment/workspace/profile/profile.component.html
@@ -1,46 +1,46 @@
-<div class="col-12 col-md-6 float-left mt-2 mb-2">
+<div class="col-12 float-left mt-2 mb-2 bg-info">
 
   <table>
     <tr>
-      <th class="col-6 col-md-2 text-center">Nome</th>
-      <th class="col-2 col-md-2 text-center">Facilitador</th>
-      <th class="col-2 col-md-2 text-center">Especialista</th>
-      <th class="col-2 col-md-2 text-center">Analista</th>
+      <th class="col-5 col-md-2 text-center">Nome</th>
+      <th class="col-2 col-md-1 text-center">Facilitador</th>
+      <th class="col-2 col-md-1 text-center">Especialista</th>
+      <th class="col-2 col-md-1 text-center">Analista</th>
+      <th class="col-1 col-md-1 text-center"> &nbsp; </th>
     </tr>
-      <tr *ngFor="let profile of profiles">
-        <td ><p class="card-text">{{ profile.name }}</p></td>
+      <tr *ngFor="let profile of profiles; trackBy: trackByProfileId">
+        <td >
+          <p class="card-text text-truncate">{{ profile.name }}</p>
+        </td>
         <td class="custom-checkbox text-center">
-            <input type="checkbox" id="{{profile.id * -1}}" [checked]="profile.admin" (click)="changeAdmin(profile.id, changeAdminCheck.checked)" #changeAdminCheck>
-            <label for="{{profile.id * -1}}"></label>
+          <input type="checkbox" id="{{profile.id + 'admin'}}" [checked]="profile.admin" (click)="changeAdmin(profile.id, changeAdminCheck.checked)" #changeAdminCheck>
+          <label for="{{profile.id + 'admin'}}"></label>
         </td>
         <td class="custom-checkbox text-center" >
-            <input type="checkbox" id="{{profile.id * -1.1}}" [checked]="profile.expert" (click)="changeExpert(profile.id, changeExpertCheck.checked)" #changeExpertCheck>
-            <label for="{{profile.id * -1.1}}"></label>
+          <input type="checkbox" id="{{profile.id + 'expert'}}" [checked]="profile.expert" (click)="changeExpert(profile.id, changeExpertCheck.checked)" #changeExpertCheck>
+          <label for="{{profile.id + 'expert'}}"></label>
         </td>
         <td class="custom-checkbox text-center" >
-            <input type="checkbox" id="{{profile.id * -1.3}}" [checked]="profile.analyst" (click)="changeAnalyst(profile.id, changeAnalystCheck.checked)" #changeAnalystCheck>
-            <label for="{{profile.id * -1.3}}"></label>
+          <input type="checkbox" id="{{profile.id + 'analyst'}}" [checked]="profile.analyst" (click)="changeAnalyst(profile.id, changeAnalystCheck.checked)" #changeAnalystCheck>
+          <label for="{{profile.id + 'analyst'}}"></label>
         </td>
         <td>
-         <a class="mx-auto display-4 mt-2 ml-3 " (click)="deleteProfile(profile.id)">
-          <h3 class="d-inline-block float-right hover-red">
-            <fa name="minus"></fa>
-          </h3>
-        </a>
-      </td>
+          <a class="mx-auto display-4 mt-2 ml-3 " (click)="deleteProfile(profile.id)">
+            <h3 class="d-inline-block float-right hover-red">
+              <fa name="minus"></fa>
+            </h3>
+          </a>
+        </td>
       </tr>
   </table>
-
-
-  <div class="d-flex col-12 border-bottom border-info" *ngFor="let suggestedUser of suggestedUsers" >
-
-    <h6 class="d-flex col-10 mt-2  align-items-center text-truncate"><span class="font-weight-bolder">{{suggestedUser.name}}</span> &nbsp; <span class="text-muted">{{suggestedUser.role}}</span></h6>
+  <hr>
+  <div class="d-flex row border-bottom border-info w-100" *ngFor="let suggestedUser of suggestedUsers" >
+    <h6 class="col-10 mt-2 align-items-center text-truncate"><span class="font-weight-bolder">{{suggestedUser.name}}</span> &nbsp; <span class="text-muted">{{suggestedUser.role}}</span></h6>
     <a class="mx-auto display-4 mt-2 ml-3 col-2" (click)="addProfile(suggestedUser.id, suggestedUser.name )">
       <h5 class="float-right hover-green">
         <fa name="plus"></fa>
       </h5>
     </a>
   </div>
-
 
 </div>
