--- a/src/app/data-environment/workspace/workspace.component.html
+++ b/src/app/data-environment/workspace/workspace.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-12">
+    <div class="col-12 mb-2">
       <pd-new-factor></pd-new-factor>
     </div>
-    <div class="col-12 col-md-6 float-left mt-2 mb-2 bg-danger">
+    <div class="col-12 col-md-6 float-left mt-2 mb-2">
       <pd-profile></pd-profile>
     </div>
-    <div class="group col-12 col-md-6 float-left mt-2 mb-2 bg-warning">
+    <div class="group col-12 col-md-6 float-left mt-2 mb-2">
       <pd-group></pd-group>
     </div>
   </div>
