--- a/src/app/data-environment/workspace/group/group.component.html
+++ b/src/app/data-environment/workspace/group/group.component.html
@@ -1,5 +1,5 @@
 <h3>Grupos</h3>
-<div *ngFor="let group of groups" class="card w-100">
+<div *ngFor="let group of groups" class="card w-100 mb-2">
     <div class="card-body">
         <h4 class="card-title">{{group.description}}</h4>
         <p class="card-text">{{group.summary}}</p>
