--- a/src/app/data-environment/workspace/profile/profile.component.css
+++ b/src/app/data-environment/workspace/profile/profile.component.css
@@ -129,3 +129,7 @@
   .custom-checkbox > [type="checkbox"]:disabled:checked + label:hover:before{
       border: 1px solid #E4E4E4 !important;
   }
+
+  .title {
+    text-align: center;
+  }
