--- a/src/app/data-environment/workspace/workspace.component.css
+++ b/src/app/data-environment/workspace/workspace.component.css
@@ -59,6 +59,11 @@
     margin-top: 80px;
     text-align: center;
 }
+
+.profile {
+    margin-top: 80px;
+}
+
 .btn-circle {
     width: 50px;
     height: 50px;
@@ -157,4 +162,10 @@
     .custom-checkbox > [type="checkbox"]:disabled:not(:checked) + label:hover:before,
     .custom-checkbox > [type="checkbox"]:disabled:checked + label:hover:before{
         border: 1px solid #E4E4E4 !important;
+    }
+
+    .workspace-item {
+        border: 2px #AAB solid;
+        border-radius: 1em;
+        background-color: #f9f9ff;
     }
