--- a/src/app/data-environment/workspace/workspace.component.html
+++ b/src/app/data-environment/workspace/workspace.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-12 mb-2">
+    <div class="col-11 my-2 mx-auto px-3 py-3 workspace-item ">
       <pd-new-factor></pd-new-factor>
     </div>
-    <div class="col-12 col-md-6 float-left mt-2 mb-2">
+    <div class="profile col-11 col-md-5 mx-auto my-3 px-3 py-3 workspace-item">
       <pd-profile></pd-profile>
     </div>
-    <div class="group col-12 col-md-6 float-left mt-2 mb-2">
+    <div class="group col-11 col-md-5 mx-auto my-3 px-3 py-3 workspace-item">
       <pd-group></pd-group>
     </div>
   </div>
