--- a/src/app/data-environment/workspace/factor/factor.component.html
+++ b/src/app/data-environment/workspace/factor/factor.component.html
@@ -36,13 +36,13 @@
     </div>
 
 </ng-template>
-<button class="btn btn-info mt-2 float-right" (click)="open(content)"> Novo Criterio </button>
 
-<div class="factor col-12 float-right">
+<h3 class="title">Critérios &nbsp; <button class="btn btn-info badge" (click)="open(content)"> <fa name="plus"></fa> </button></h3>
+<div class="factor col-12">
   <span *ngFor="let factor of factors">
-    <div class="row mt-3">
-      <div class="col-12 col-md-2 h2 factor-item d-flex align-items-center factor-tag">{{factor.tag}}</div>
-      <div class="col-12 col-md-7 factor-item ">
+    <div class="row border-left-info shadow-sm py-2 mb-3 px-2 rounded-right">
+      <div class="col-12 col-md-2 h2 d-flex align-items-center">{{factor.tag}}</div>
+      <div class="col-12 col-md-7">
         {{factor.description}}<br />
         <span class="text-muted">{{factor.summary}}</span>
       </div>
@@ -54,42 +54,17 @@
           attr.data-target="#sections{{factor.id}}" [disabled]="factor.sections.length == 0" (click)="toggle()">
           <fa [name]="visible? 'caret-up' : 'caret-down'"></fa>
         </button>
-        <a class="mx-auto display-4 mt-2 ml-3" (click)="deleteFactor(factor.id)">
+        <a class="mx-auto display-4 mt-2 ml-3 mr-3" (click)="deleteFactor(factor.id)">
           <h3 class="d-inline-block float-right  hover-red">
             <fa name="minus"></fa>
           </h3>
         </a>
       </div>
     </div>
-        <div class="row collapse" id="sections{{factor.id}}">
-          
-          <pd-section [sections]="factor.sections"></pd-section>
-            
-      </div>
-    <div class="card col-12 col-md-3 collapse mt-2" id="newSection{{factor.id}}">
-      <div class="card-body">
-        <p class="card-text"><input type="text" placeholder="Tag" name="newSectionTag" id="newSectionTag"
-            [(value)]="newSectionTag" #sectionTag></p>
-        <p class="card-text"><input type="text" placeholder="Description" name="newSectionDescription"
-            id="newSectionDescription" [(value)]="newSectionDescription" #sectionDescription></p>
-        <p class="text-muted"><input type="text" placeholder="Summary" name="newSectionSummary" id="newSectionSummary"
-            [(value)]="newSectionSummary" #sectionSummary></p>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" value="" id="newSectionSelected"
-           [(checked)]="newSectionSelected" #sectionSelected>
-          <label class="form-check-label" for="newSectionSelected">
-            Replicar
-          </label>
-        </div>
-        <br /><br />
-        <button type="button" class="btn btn-outline-primary mr-1"
-          (click)="newSection(sectionTag.value, sectionDescription.value, sectionSummary.value, sectionSelected.checked, factor)">Adicionar</button>
-        <button type="button" class="btn btn-outline-danger" data-toggle="collapse"
-          attr.data-target="#newSection{{factor.id}}"> Cancelar </button>
-      </div>
-    </div>
+    <pd-section [sections]="factor.sections" [factor]="factor"></pd-section>
+        
 
   </span>
 </div>
 
-
+          
