--- a/src/app/data-environment/workspace/profile/profile.component.html
+++ b/src/app/data-environment/workspace/profile/profile.component.html
@@ -33,11 +33,11 @@
       </tr>
   </table>
   <hr>
-  <div class="d-flex row border-bottom border-info w-75 mx-auto" *ngFor="let suggestedUser of suggestedUsers" >
+  <div class="d-flex row border-bottom border-info w-80 mx-auto" *ngFor="let suggestedUser of suggestedUsers" >
     <h6 class="col-10 mt-2 align-items-center text-truncate"><span class="font-weight-bolder">{{suggestedUser.name}}</span> &nbsp; <span class="text-muted">{{suggestedUser.role}}</span></h6>
     <a class="mx-auto display-4 mt-2 ml-3 col-2" (click)="addProfile(suggestedUser.id, suggestedUser.name )">
       <h5 class="float-right hover-green">
-        <fa name="plus"></fa>
+        <fa [name]="buttonNewProfile['{{suggestedUser.id}}']"></fa>
       </h5>
     </a>
   </div>
