--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg sticky-top navbar-dark" style="background-color: #004e4e;">
-    <div class="containe-fluid">
+    <div class="container-fluid">
       <!-- page-header -->
-      <div class="row">
-      <div class="col">
+      <div class="row w-100">
+      <div class="col-1">
         <nav class="navbar-brand mb-0 h1">
           {{ name }}
         </nav>
@@ -14,7 +14,7 @@
         </button>
       </div>
       <!-- navbar opções -->
-      <div class="col">
+      <div class="col-5">
         <div class="collapse navbar-collapse" id="navbarContent">
           <ul class="navbar-nav mr-auto mt-12 mt-lg-12">
             <li class="nav-item">
@@ -52,8 +52,8 @@
 
         </div>
       </div>
-      <div class="col">
-      <span class="navbar-text">
+      <div class="col-6">
+      <span class="navbar-text float-right">
         {{ proposition?.description }}
       </span>
       </div>
