--- a/src/app/data-environment/workspace/group/group.component.html
+++ b/src/app/data-environment/workspace/group/group.component.html
@@ -1,11 +1,51 @@
+<ng-template #content let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Edição do Grupo</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <form>
+        <div class="form-group">
+            <label for="newGroupName">Nome</label>
+            <input id="newGroupName" class="form-control" name="newGroupName"
+            [(value)]="newGroupName" #groupName>
+            <hr />
+            <label for="newGroupSummary">Resumo</label>
+            <textarea class="form-control" id="newGroupSummary" rows="3" name="newGroupSummary"
+            [(value)]="newGroupSummary" #groupSummary></textarea>
+            <hr />
+            <div class="form-check">
+
+                <div class="d-flex row border-bottom border-info w-100 mx-auto" *ngFor="let suggestedProfile of suggestedProfiles" >
+                    <h6 class="col-10 mt-2 align-items-center text-truncate"><span class="font-weight-bolder">{{profile.userName}}</span> &nbsp; </h6>
+                    <a class="mx-auto display-4 mt-2 ml-3 col-2" (click)="addToGroup(profile.id, group.id )">
+                      <h5 class="float-right hover-green">
+                        <fa name="plus"></fa>
+                      </h5>
+                    </a>
+                  </div>
+            </div>
+            
+        </div>
+    </form>
+</div>
+<div class="modal-footer">
+    <button type="button" class="btn btn-outline-primary"
+    (click)="newFactor(factorTag.value, factorDescription.value, factorSummary.value, factorSelected.checked)">Adicionar</button>
+</div>
+</ng-template>
+
+
 <h3>Grupos</h3>
 <div *ngFor="let group of groups" class="card w-100">
     <div class="card-body">
         <h4 class="card-title">{{group.description}}</h4>
         <p class="card-text">{{group.summary}}</p>
-        <button class="btn btn-primary" >Editar</button>
+        <button class="btn btn-primary" (click)="open(content)">Editar</button>
     </div>
 </div>
-<button type="button" class="btn-circle btn btn-outline-primary" (click)="newGroup()">
+<button type="button" class="btn-circle btn btn-outline-primary" (click)="newGroup()" >
     <fa name="plus"></fa>
 </button>
