comeco de troca de animacao

--- a/src/app/data-environment/workspace/profile/profile.component.html
+++ b/src/app/data-environment/workspace/profile/profile.component.html
@@ -37,7 +37,7 @@
     <h6 class="col-10 mt-2 align-items-center text-truncate"><span class="font-weight-bolder">{{suggestedUser.name}}</span> &nbsp; <span class="text-muted">{{suggestedUser.role}}</span></h6>
     <a class="mx-auto display-4 mt-2 ml-3 col-2" (click)="addProfile(suggestedUser.id, suggestedUser.name )">
       <h5 class="float-right hover-green">
-        <fa [name]="buttonNewProfile['{{suggestedUser.id}}']"></fa>
+        <fa [name]="buttonNewProfile"></fa>
       </h5>
     </a>
   </div>
